Fix comment link (and h2) color, so the current format colors don't bleed. Fixes #36

--- a/less/_colors.less
+++ b/less/_colors.less
@@ -68,12 +68,6 @@
 			&:hover { color: darken( @base, 10% ); }
 		}
 	}
-	.comment-content {
-		a {
-			color: @base;
-			&:hover { color: darken( @base, 10% ); }
-		}
-	}
 	.entry-meta {
 		@text: saturate( darken( @base, 20% ), 23%);
 		color: @text;
